# dspy_ai_learning

./: .gitignore  README.md  pyproject.toml
.github/prompts/: skill_full_stack_ai.md.prompt.md
infra/: docker-compose.yml  dockerfile  otimizar_wsl.sh  setup_git.sh  setup_ollama.sh
results/: dspy_results.txt  sentiment_mipro_final.json
src/app/: main.py  setup_dataset.py
src/domain/dataset/: b2w_loader.py  b2w_review.py  dataset_adapter.py  download_b2w.py  schema.py
src/domain/evaluation/: logger.py  sentiment_eval.py  sentiment_opt.py  sentiment_opt_fewshot.py  sentiment_opt_mipro_v2.py
src/domain/module/: sentiment.py
src/domain/signature/: sentiment.py
src/utils/: config.py  rate_limiter.py  rate_limiter_callback.py
